Fixed volunteers not showing up on case dashboard

--- a/src/app/pages/maps/google-maps/google-maps.component.scss
+++ b/src/app/pages/maps/google-maps/google-maps.component.scss
@@ -12,7 +12,5 @@
 // }
 
 #map {
-  height: 100%;
-  width: 100%;
   margin: 20px;
  }
